[package]
name = "tongsuo-src"
version = "840.0.1+8.4.0pre1"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/zh-jq/tongsuo-src-rs"
description = """
Source of Tongsuo and logic to build it.
"""
exclude = [
  'tongsuo/fuzz/corpora/*',
  'tongsuo/test/recipes/*',
]

[features]
default = []
# Enables compilation of the legacy provider, which must be loaded at runtime to use various
# uncommon or insecure algorithms.
legacy = []
# Enables compilation of some older algorithms: md2 (hash), rc5 (block cypher) and enabled use of
# some weaker algorithms in SSL connections. These are generally not recommended for use.
weak-crypto = []
# Forces configuring Engine module support.
force-engine = []

[workspace]
members = ['testcrate']
exclude = ['target']

[dependencies]
cc = "1.0.79"
