[package]
name = "tongsuo-src"
version = "840.1.1+8.4.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/zh-jq/tongsuo-src-rs"
description = """
Source of Tongsuo and logic to build it.
"""
exclude = [
  'tongsuo/fuzz/corpora/*',
  'tongsuo/test/recipes/*',
  'tongsuo/rpm/*',
]

[features]
default = []
# Forces configuring Engine module support.
force-engine = []

[workspace]
members = ['testcrate']
exclude = ['target']

[dependencies]
cc = "1.0.79"
